--- a/src/plugins/drawing/components/drawing-tile.scss
+++ b/src/plugins/drawing/components/drawing-tile.scss
@@ -4,6 +4,10 @@
   display: flex;
   height: 100%;
 
+  &.overflow-visible {
+    overflow: visible;
+  }
+
   .drawing-container {
     display: flex;
 
